# deeptrace

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TRAINING_LOG.md  celery_app.py  docker-compose.yml  index.html  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  start-deploy.sh  vercel.json  webhooks.html
.github/workflows/: ci.yml  sync-hf-space.yml
api/: db.py  main.py  middleware.py
api/auth/: __init__.py  keys.py  middleware.py  ratelimit.py  tiers.py
api/routes/: __init__.py  model.py  predict.py  system.py
checkpoints/efficientnet_b3/: best.pth
checkpoints/ensemble/: weights.json
deploy/: space_README.md
logs/: connection_test.txt  eval_report.json  training_history.json
logs/efficientnet_b0/: eval_report.json
logs/ensemble/: fit_report.json
logs/vit_b16/: eval_report.json
scripts/: create_admin_key.py  download_dataset.py  generate_synthetic_videos.py  prepare_dataset.py  train_pipeline.py  verify_auth.py  verify_training.py
src/deepfake_recognition/audio/: __init__.py  audio_fusion.py  (+2 more)
tests/: test_api.py  test_async_jobs.py  test_audio.py  test_auth.py  test_calibration.py  test_dataset.py  test_ensemble.py  test_explainability.py  test_inference.py  test_models.py  test_transforms.py  test_vit.py
tests/fixtures/: audio_fixture_generator.py  group_photo_generator.py
training/: calibrate.py  evaluate.py  fit_ensemble.py  merge_kaggle_dataset.py  train.py
training/configs/: efficientnet_b0.yaml  efficientnet_b3.yaml  resnet18.yaml  vit_b16.yaml  vit_base.yaml
worker/: progress.py  storage.py  tasks.py
(+25 files in other folders)
